@@ -24,7 +24,7 @@ public class DriveUtils {
 	}
 
 	public static int inchesPerSecondToEncoderCountPer100ms(double inches_per_second) {
-		return new Double(rotationsToEncoderCount(inchesPerSecondToRotationsPer100ms(inches_per_second))).intValue();
+		return Double.valueOf(rotationsToEncoderCount(inchesPerSecondToRotationsPer100ms(inches_per_second))).intValue();
 	}
 	
 	public static double rotationsToEncoderCount(double rotations) {
